--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Time Clock</title>
-
-    <!-- PWA META -->
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#3b82f6" />
-    <link rel="apple-touch-icon" href="/icon-192.png" />
-
-    <!-- VITE INJECT -->
-    <script type="module" src="/src/main.jsx"></script>
+    <title>Time Clock App</title>
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- PWA SERVICE WORKER -->
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
-            .then(reg => console.log('SW registered', reg))
-            .catch(err => console.log('SW failed', err));
-        });
-      }
-    </script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
